RESOLVED FIXED76017
[Chromium] Fix compositor setting color uniforms incorrectly for solid color quads.
https://bugs.webkit.org/show_bug.cgi?id=76017
Summary [Chromium] Fix compositor setting color uniforms incorrectly for solid color ...
Daniel Sievers
Reported 2012-01-10 18:10:40 PST
\[Chromium] Fix compositor setting color uniforms incorrectly for solid color quads.
Attachments
Patch (1.66 KB, patch)
2012-01-10 18:11 PST, Daniel Sievers
no flags
Daniel Sievers
Comment 1 2012-01-10 18:11:12 PST
Adrienne Walker
Comment 2 2012-01-11 08:30:39 PST
Oops. Thanks for fixing this.
WebKit Review Bot
Comment 3 2012-02-21 21:12:01 PST
Comment on attachment 121954 [details] Patch Clearing flags on attachment: 121954 Committed r108442: <http://trac.webkit.org/changeset/108442>
WebKit Review Bot
Comment 4 2012-02-21 21:12:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.