[Chromium] Fix compositor setting color uniforms incorrectly for solid color quads. https://bugs.webkit.org/show_bug.cgi?id=76017

Patch by Daniel Sievers <sievers@chromium.org> on 2012-02-21
Reviewed by James Robinson.

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::drawSolidColorQuad):

Canonical link: https://commits.webkit.org/96246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108442 268f45cc-cd09-0410-ab3c-d52691b4dbfc